# act-ultra

./: .gitignore  Makefile  constants.py  ee_sim_env.py  hu-po-logs.md  imitate_episodes.py  policy.py  pyproject.toml  record_sim_episodes.py  scripted_policy.py  setup.sh  sim_env.py  sweep-act-50.yaml  sweep-act.yaml  sweep-diff.yaml  sweep-multi.sh  sweep.yaml  xorg.conf
assets/: scene.xml  viperx_ee_pickup_cube.xml  viperx_pickup_cube.xml
detr/: main.py
detr/models/: detr_vae.py
detr/util/: misc.py
