[tool.poetry]
name = "act"
version = "0.0.1"
description = "Act Repo"
license="Proprietary"
authors = [
  "Chetan Parthiban <cparthiban08@gmail.com>",
]
readme = "README.md"
repository="https://github.com/tonyzhaozh/act"
packages = [
  { include = "detr" },
]

[tool.poetry.dependencies]
python = "~3.10"
torch = "^2.0.0"
numpy = "<2.0.0"
torchvision = "^0.15.0"
pyquaternion = "^0.9.9"
pyyaml = "^6.0"
rospkg = "^1.5.0"
pexpect = "^4.8.0"
mujoco = "^2.3.3"
dm_control = "^1.0.9"
opencv-python = "^4.7.0"
matplotlib = "^3.7.1"
einops = "^0.6.0"
packaging = "^23.0"
h5py = "^3.8.0"
ipython = "^8.12.0"
jupyterlab = "^4.2.3"
wandb = "^0.16.3"
